@@ -430,7 +430,7 @@ fun kodkod_problem_from_term ctxt total raw_card raw_infinite t =
 fun solve_any_kodkod_problem thy problems =
   let
     val {debug, overlord, timeout, ...} = Nitpick_Commands.default_params thy []
-    val deadline = Time.now () + timeout
+    val deadline = Timeout.end_time timeout
     val max_threads = 1
     val max_solutions = 1
   in
